Navbar abd Breadcrumb

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ footer {
 }
 
 .jumbotron {
+    margin: 0%;
     padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
     color: white;
@@ -30,3 +31,11 @@ footer {
     border-bottom: 1px ridge;
     min-height: 200px;
 }
+
+.navbar{
+    margin: 0%;
+    margin-bottom: 0%;
+    background-color: #CEC8FF;
+    
+}
+
