--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,18 @@ footer {
     
 }
 
+.tab-content{
+    border: 1px #CEC8FF;
+    border-top: 10px;
+    padding:20px;
+    
+    
+}
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.carousel {
+    border: solid #5637DD;
+}
