Bootstrap and JQUERY

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,12 @@ footer {
 .carousel {
     border: solid #5234d6;
 }
+
+
+#carouselButton{
+
+    position:absolute;
+    right:0%;
+    bottom:0%;
+     z-index: 100;
+}
