--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,48 @@
-
-
 body {
-    font-family: "", sans-serif;
-}
+  font-family: "", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046C5;
-}
+  color: #3046C5; }
 
 header h2 {
-    color: #CEC8FF;
-}
+  color: #CEC8FF; }
 
 footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    margin: 0%;
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
+  margin: 0%;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
 
-.navbar{
-    margin: 0%;
-    margin-bottom: 0%;
-    background-color: #CEC8FF;
-    
-}
+.navbar {
+  margin: 0%;
+  margin-bottom: 0%;
+  background-color: #901CAD; }
 
-.tab-content{
-    border: 1px #CEC8FF;
-    border-top: 10px;
-    padding:20px;
-    
-    
-}
+.tab-content {
+  border: 1px #CEC8FF;
+  border-top: 10px;
+  padding: 20px; }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, .5);
-}
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .carousel {
-    border: solid #5234d6;
-}
+  border: solid #5637dd; }
 
-
-#carouselButton{
-
-    position:absolute;
-    right:0%;
-    bottom:0%;
-     z-index: 100;
-}
+#carouselButton {
+  position: absolute;
+  right: 0%;
+  bottom: 0%;
+  z-index: 100; }
